# linkedin-gateway

./: BUGFIX_NOTES.md  CLAUDE.md  SECURITY_AUDIT.md
backend/: .gitignore  pyproject.toml
backend/app/api/v1/: messages.py  utils.py
backend/app/linkedin/utils/: my_profile_id.py  profile_id_extractor.py
chrome-extension/: .gitignore  package-lock.json  package.json  webpack.config.v2.js
chrome-extension/src-v2/background/controllers/: gemini.controller.js
chrome-extension/src-v2/background/services/: storage.service.js
chrome-extension/src-v2/pages/components/dashboard/: ServerSettings.js
chrome-extension/src-v2/shared/config/: app.config.js
deployment/: Dockerfile
