[project]
name = "backend"
version = "0.1.0"
description = "LinkedIn Gateway backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic==2.11.3",
    "pydantic-settings==2.6.0",
    "sqlalchemy[asyncio]==2.0.40",
    "greenlet>=3.0.0",
    "alembic==1.15.2",
    "psycopg2-binary==2.9.10",
    "asyncpg==0.30.0",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==3.2.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.0",
    "starlette==0.46.2",
    "itsdangerous==2.1.2",
    "websockets==15.0.1",
    "httpx==0.28.1",
    "fastapi-limiter==0.1.6",
    "redis==5.0.1",
    "openapi-spec-validator==0.7.1",
    "iso8601==2.1.0",
    "email-validator==2.2.0",
    "authlib==1.5.2",
    "google-auth>=2.29.0",
    "google-auth-oauthlib>=1.2.0",
    "cryptography==42.0.5",
    "brotlicffi>=1.2.0.1",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.23.5",
]
